content/docs/v0.0.1/reference/azurerm.kubeform.com/AvailabilitySet.md
---
title: AvailabilitySet
menu:
  docs_v0.0.1:
    identifier: availabilityset-azurerm.kubeform.com
    name: AvailabilitySet
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## AvailabilitySet
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `AvailabilitySet` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[AvailabilitySetSpec](#AvailabilitySetSpec)***||
| `status` | ***[AvailabilitySetStatus](#AvailabilitySetStatus)***||
## AvailabilitySetSpec
##### (Appears on:[AvailabilitySet](#AvailabilitySet), [AvailabilitySetStatus](#AvailabilitySetStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `location` | ***string***||
| `managed` | ***bool***| ***(Optional)*** |
| `name` | ***string***||
| `platformFaultDomainCount` | ***int***| ***(Optional)*** |
| `platformUpdateDomainCount` | ***int***| ***(Optional)*** |
| `resourceGroupName` | ***string***||
| `tags` | ***map[string]string***| ***(Optional)*** |
## AvailabilitySetStatus
##### (Appears on:[AvailabilitySet](#AvailabilitySet))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[AvailabilitySetSpec](#AvailabilitySetSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
